# rag

./: .gitignore  evaluate_retrieval.py  generate_dataset.py  main.py  pipeline_test.ipynb  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
src/: chunk.py  database.py  embed.py  load.py  viewer.py
src/download_dataset/: load.py
src/embedder/: embed.py
