[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "deepeval>=3.9.7",
    "langchain>=1.2.15",
    "langchain-core>=1.2.29",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.10.0",
    "transformers>=5.5.4",
]

[project.scripts]
load-dataset = "load:load"
run-embed = "embed:embed"

[tool.setuptools.packages.find]
where = ["src"]
